FIX : table overflow issue resolved

--- a/client/src/components/table/Table.scss
+++ b/client/src/components/table/Table.scss
@@ -73,6 +73,7 @@
     }
 
     .table-body {
+      overflow-x: auto;
       margin-top: 0px;
       max-height: calc(100vh - 15rem);
       border: 1px solid rgba(255, 255, 255, 0.3);
@@ -139,4 +140,17 @@
       }
     }
   }
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 1.5rem;
+  background-color: rgb(179, 171, 171);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
